# sentinel

./: .gitignore  .release-please-manifest.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bacon.toml  clippy.toml  codecov.yml  deny.toml  docker-compose.yml  release-please-config.json  sonar-project.properties
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude.yml  codecov.yml  postgresql.yml  publish-crates.yml  release-please.yml  security.yml  weekly-digest.yml
.sentinel/: schema.toml
.sentinel/queries/: 79f16f6b044ae.json  7b076c5336a05.json  88f26472e41c0.json  b0c4d1a103bfc.json  d1b6981d50ed3.json
docs/: migration-from-sqlx.md  migration-guide.md  observability-guide.md  testing-guide.md
docs/plans/: 2026-04-03-sentinel-design.md  2026-04-03-sentinel-phase1-impl.md  2026-04-04-sentinel-phase2-design.md  2026-04-04-sentinel-phase2-impl.md  2026-04-05-sentinel-phase3-design.md  2026-04-05-sentinel-phase3-impl.md  2026-04-06-infra-and-rename.md  2026-04-08-integration-tests-design.md  2026-04-09-phase4-relations-design.md  (+17 more)
examples/: README.md
examples/axum-bench/: Cargo.toml
examples/axum-bench/.sentinel/: schema.toml
examples/axum-bench/.sentinel/queries/: 2626d3f4e5d1c.json  93a2f647a0777.json  ea592aaabe154.json
examples/axum-bench/sql/: setup.sql
examples/axum-bench/src/: main.rs
examples/axum-sqlx-bench/: Cargo.toml
examples/axum-sqlx-bench/sql/: setup.sql
examples/axum-sqlx-bench/src/: main.rs
sentinel-cli/: Cargo.toml
sentinel-core/: Cargo.toml
sentinel-macros/: Cargo.toml
sentinel-migrate/: Cargo.toml
sntl/: CHANGELOG.md  Cargo.toml
sntl-cli/: CHANGELOG.md  Cargo.toml
sntl-cli/src/: main.rs  scan.rs  ui.rs
sntl-cli/src/commands/: check.rs  doctor.rs  init.rs  migrate.rs  mod.rs  prepare.rs
sntl-cli/tests/: init_test.rs  migrate_add_test.rs  migrate_diff_test.rs  migrate_run_test.rs
sntl-core/: CHANGELOG.md  Cargo.toml
sntl-core/src/: expr.rs  lib.rs  prelude.rs
sntl-core/src/query/: dynamic.rs  insert.rs  update.rs
sntl-core/src/types/: value.rs
sntl-core/tests/: delete_test.rs  derive_attrs_test.rs  derive_columns_test.rs  derive_create_test.rs  derive_exec_test.rs  derive_model_test.rs  derive_partial_test.rs  dynamic_test.rs  error_bridge_test.rs  error_test.rs  execute_query_test.rs  expr_test.rs  fetch_test.rs  insert_test.rs  model_test.rs  prelude_test.rs  select_test.rs  update_test.rs  value_test.rs  value_tosql_test.rs
sntl-macros/: CHANGELOG.md  Cargo.toml
sntl-macros/src/: lib.rs
sntl-macros/src/fromrow/: codegen.rs  mod.rs
sntl-macros/src/migrate/: codegen.rs  mod.rs
sntl-macros/src/model/: codegen.rs  mod.rs
sntl-macros/src/partial/: codegen.rs  ir.rs  mod.rs
sntl-macros/src/query/: anonymous.rs  args.rs  codegen.rs  file.rs  lookup.rs  mod.rs  pipeline.rs  typed.rs  unchecked.rs
sntl-macros/src/relation/: codegen.rs  ir.rs  mod.rs
sntl-macros/src/test/: codegen.rs  mod.rs
sntl-macros/tests/: fromrow_expand.rs  query_expand.rs
sntl-macros/tests/compile_fail/: duplicate_primary_key.rs  no_primary_key.rs  unknown_attribute.rs
sntl-macros/tests/expand/fromrow/: basic.rs
sntl-macros/tests/expand/query/: array_basic.rs  array_non_null.rs  basic.rs  cache_miss.rs  cache_miss.stderr  non_null_elements_bad.rs  non_null_elements_bad.stderr  tuple_arity_bad.rs  tuple_arity_bad.stderr  tuple_basic.rs
sntl-migrate/: CHANGELOG.md  Cargo.toml
sntl-migrate/src/: checksum.rs  discover.rs  error.rs  lib.rs  macro_support.rs  migration.rs  refresh.rs  runner.rs  tracking.rs
sntl-migrate/src/diff/: compare.rs  emit.rs  mod.rs
sntl-migrate/tests/: checksum_test.rs  diff_test.rs  discover_test.rs  embedded_test.rs  migrate_instrumentation_test.rs  runner_test.rs  tracking_test.rs  version_test.rs
sntl-migrate/tests/embedded_fixtures/migrations/20260101_000000_seed/: up.sql
sntl-schema/: Cargo.toml
sntl-schema/examples/: compute_hash.rs
sntl-schema/src/: cache.rs  config.rs  error.rs  introspect.rs  lib.rs  normalize.rs  nullable.rs  parser.rs  resolve.rs  schema.rs  scope.rs
sntl-schema/tests/: cache_element_type_test.rs  cache_test.rs  config_test.rs  normalize_test.rs  nullable_test.rs  parser_test.rs  resolve_element_test.rs  resolve_test.rs  schema_test.rs  scope_test.rs
sntl/benches/: macro_expand.rs  query_single.rs
sntl/src/: __priv.rs  lib.rs  migrate.rs
sntl/src/core/: copy.rs  error.rs  expr.rs  mod.rs  model.rs  observability.rs  prelude.rs  relation.rs  transaction.rs
sntl/src/core/query/: cursor.rs  delete.rs  dynamic.rs  exec.rs  include.rs  insert.rs  macro_support.rs  mod.rs  pascal.rs  select.rs  typed.rs  update.rs
sntl/src/core/types/: value.rs
sntl/src/testing/: fixtures.rs  mod.rs  run.rs  template.rs
sntl/tests/: compile_fail_test.rs  copy_test.rs  cursor_test.rs  delete_test.rs  derive_attrs_test.rs  derive_columns_test.rs  derive_create_test.rs  derive_exec_test.rs  derive_model_test.rs  derive_partial_test.rs  dynamic_test.rs  error_bridge_test.rs  error_test.rs  execute_query_test.rs  expr_test.rs  fetch_test.rs  include_e2e_test.rs  include_query_test.rs  include_transition_test.rs  insert_test.rs  instrumentation_test.rs  macro_array_test.rs  macro_query_test.rs  macro_stream_test.rs  macro_tuple_from_row_test.rs  model_test.rs  otel_e2e_test.rs  pascal_query_test.rs  pg_exec_test.rs  pg_generic_client_test.rs  pg_include_test.rs  pg_pool_test.rs  pg_relation_test.rs  pg_transaction_test.rs  pg_value_roundtrip_test.rs  pool_arg_test.rs  prelude_test.rs  relation_e2e_test.rs  relation_spec_test.rs  relation_types_test.rs  (+9 more)
sntl/tests/compile_fail/: duplicate_primary_key.rs  include_required.rs  include_required.stderr  no_primary_key.rs  unknown_attribute.rs  unloaded_relation_access.rs  unloaded_relation_access.stderr
sntl/tests/fixtures/: posts.sql  users.sql
sntl/tests/pg_helpers/: mod.rs
sntl/tests/test_migrations/20260514_120000_init/: up.sql
sntl/tests/test_migrations/20260514_120001_posts/: up.sql
(+47 files in other folders)
