[workspace]
members = [
    "sentinel-core",
    "sentinel-macros",
    "sentinel-migrate",
    "sentinel-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sentinel-orm/sentinel"
rust-version = "1.85"

[workspace.dependencies]
sentinel-core = { path = "sentinel-core" }
sentinel-macros = { path = "sentinel-macros" }
sentinel-migrate = { path = "sentinel-migrate" }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
darling = "0.20"
proc-macro2 = "1"
proc-macro-error2 = "2"
