[workspace]
members = [
    "sntl",
    "sntl-core",
    "sntl-macros",
    "sntl-migrate",
    "sntl-cli",
    "sntl-schema",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
publish = true
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cntm-labs/sentinel"
rust-version = "1.85"

[workspace.dependencies]
sntl = { path = "sntl", version = "0.1.0" }
sntl-core = { path = "sntl-core", version = "0.1.0" }
sntl-macros = { path = "sntl-macros", version = "0.1.0" }
sntl-migrate = { path = "sntl-migrate", version = "0.1.0" }
sntl-schema = { path = "sntl-schema", version = "0.1.0" }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
darling = "0.20"
proc-macro2 = "1"
proc-macro-error2 = "2"
trybuild = "1"
sentinel-driver = "2.0.0"
serde_json = "1"
rust_decimal = "1"
bytes = "1"
sqlparser = "0.57"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
owo-colors = "4"
anyhow = "1"
tempfile = "3"
regex = "1"
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"] }
