[package]
name = "sntl-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sentinel ORM CLI — prepare, check, doctor"
readme = "../README.md"
keywords = ["orm", "postgresql", "cli"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "sntl"
path = "src/main.rs"

[dependencies]
sntl.workspace = true
sntl-schema.workspace = true
tokio.workspace = true
clap.workspace = true
indicatif.workspace = true
owo-colors.workspace = true
walkdir.workspace = true
anyhow.workspace = true
regex.workspace = true
