[package]
name = "sntl-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for Sentinel ORM — Model, QueryBuilder, Relations"
readme = "../README.md"
keywords = ["orm", "postgresql", "compile-time", "type-safe", "database"]
categories = ["database"]
