[package]
name = "sntl-macros"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macros for Sentinel ORM — #[derive(Model)], #[derive(Partial)]"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
darling.workspace = true
proc-macro2.workspace = true
proc-macro-error2.workspace = true

[dev-dependencies]
sntl.workspace = true
trybuild.workspace = true
uuid.workspace = true
chrono.workspace = true
sentinel-driver.workspace = true
