[package]
name = "sntl-migrate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Schema diff and migration generation for Sentinel ORM"
readme = "../README.md"
keywords = ["orm", "postgresql", "migration", "schema", "database"]
categories = ["database"]
