[package]
name = "sntl-migrate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Migrations library + CLI helpers for Sentinel ORM"
readme = "../README.md"
keywords = ["orm", "postgresql", "migrations"]
categories = ["database"]

[dependencies]
sentinel-driver.workspace = true
sntl-schema = { workspace = true, features = ["online"] }
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
sha2.workspace = true
hex.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
chrono.workspace = true
