[package]
name = "sntl-schema"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared schema analysis and cache library for Sentinel ORM macros and CLI"
readme = "../README.md"
keywords = ["orm", "postgresql", "sql", "schema", "compile-time"]
categories = ["database"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true
sqlparser.workspace = true
sha2.workspace = true
hex.workspace = true
walkdir.workspace = true
sentinel-driver = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[features]
default = ["online"]
online = ["dep:sentinel-driver", "dep:tokio"]
