[package]
name = "sntl"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Compile-time guarded ORM for PostgreSQL — your data's guardian from compile to production"
readme = "../README.md"
keywords = ["orm", "postgresql", "compile-time", "type-safe", "async"]
categories = ["database", "asynchronous"]

[dependencies]
macros = { package = "sntl-macros", path = "../sntl-macros" }
driver = { package = "sentinel-driver", git = "https://github.com/cntm-labs/sentinel-driver.git", tag = "sentinel-driver-v0.1.0" }
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
bytes.workspace = true

[dev-dependencies]
cargo-husky.workspace = true
trybuild.workspace = true
