[package]
name = "sntl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Compile-time guarded ORM for PostgreSQL — your data's guardian from compile to production"
readme = "../README.md"
keywords = ["orm", "postgresql", "compile-time", "type-safe", "async"]
categories = ["database", "asynchronous"]

[dependencies]
macros = { package = "sntl-macros", path = "../sntl-macros", version = "0.1.0" }
driver = { package = "sentinel-driver", version = "2.0.0", features = ["with-rust-decimal"] }
serde_json.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
bytes.workspace = true

[dev-dependencies]
cargo-husky.workspace = true
trybuild.workspace = true
sntl-schema.workspace = true
criterion = "0.5"

[[bench]]
name = "macro_expand"
harness = false

[[bench]]
name = "query_single"
harness = false
