[package]
name = "sntl"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Compile-time guarded ORM for PostgreSQL — your data's guardian from compile to production"
readme = "../README.md"
keywords = ["orm", "postgresql", "compile-time", "type-safe", "async"]
categories = ["database", "asynchronous"]

[dependencies]
macros = { package = "sntl-macros", path = "../sntl-macros", version = "0.1.0" }
driver = { package = "sentinel-driver", version = "4.0.0", features = ["with-rust-decimal"] }
serde_json.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
bytes.workspace = true
anyhow.workspace = true
tracing = "0.1"
sha2.workspace = true
hex.workspace = true
sntl-migrate.workspace = true

[dev-dependencies]
cargo-husky.workspace = true
trybuild.workspace = true
sntl-schema.workspace = true
criterion = "0.5"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["registry"] }

[[bench]]
name = "macro_expand"
harness = false

[[bench]]
name = "query_single"
harness = false
