[package]
name = "axum-sqlx-bench"
version = "0.0.1"
edition = "2024"
publish = false
description = "TechEmpower-style microbench for sqlx + axum (comparison baseline)"

# Standalone — not part of the workspace.

[workspace]

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "json", "query"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
anyhow = "1"
